# osship

./: .dockerignore  .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum
apps/web/: Dockerfile  package-lock.json  package.json
deploy/: Dockerfile.jenkins  Jenkinsfile  cloud-script.sh  docker-compose.jenkins.yml
insomnia/: development_environment.yaml  gateway.yaml  grafana.yaml
migrations/general/: 001_init.up.sql  002_stripe_connect.up.sql  003_password_salt.up.sql  004_session_is_active.up.sql
migrations/init/: 001_schemas.sql
migrations/metrics/: 001_init.up.sql
migrations/payments/: 001_init.up.sql  002_outbox.up.sql
nginx/: nginx.conf
observability/grafana/dashboards/: auth.json  (+9 more)
observability/prometheus/: prometheus.yml
scripts/: deploy.sh  health-check.sh  integration-test.sh  kafka-init-topics.sh  migrate.sh  phase2-test.sh  seed.sh  smoke-test.sh
services/auth/: Dockerfile  go.mod  go.sum  main.go
services/gateway/: Dockerfile  go.mod  go.sum  main.go
services/listings/: Dockerfile  go.mod  go.sum  main.go
services/mentors/: Dockerfile  github.go  go.mod  main.go
services/metrics/: Cargo.toml  Dockerfile
services/metrics/src/: main.rs  metrics_middleware.rs
services/notifications/: Dockerfile  go.mod  go.sum  main.go
services/payments/: Cargo.toml  Dockerfile
services/sessions/: Dockerfile  go.mod  main.go
services/users/: Dockerfile  go.mod  go.sum  main.go
tests/integration/: go.mod  phase1_test.go
(+15 files in other folders)
